--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,20 @@ img {
 	height:100px;
 }
 
+.white {
+	background:white;
+	height:80px;
+	margin-top:10px;
+	margin-bottom:10px;
+}
+
+.green {
+	background:green;
+	height:60px;
+	margin-top:10px;
+	margin-bottom:10px;
+}
+
 .col-1-3 {
 	width:33.33%;
 }
