--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@
 
 
 .row {
-	padding: 20px 0;
+	padding: 10px 0;
 }
 
 img {
@@ -57,6 +57,7 @@ img {
 	width:50%;
 }
 
+/* test items */
 .red {
 	background:red;
 	height:100px;
@@ -75,7 +76,7 @@ img {
 	margin-top:10px;
 	margin-bottom:10px;
 }
-
+/* end of test items */
 .col-1-3 {
 	width:33.33%;
 }
@@ -307,7 +308,7 @@ li {
 
 nav {
 	float:right !important;
-	padding:24px 0 !important;
+	padding:15px 0 !important;
 }
 
 header p {
@@ -327,11 +328,83 @@ header p {
 }
 
 #hero > .wrapper {
-	background-image: url();
+	background-image: url(../img/hero.jpg);
+	background-size:cover;
+	background-position:center;
+	padding:118px 0 80px;
+	color:#fff;
 }
 
 .bg-lunar-dust {
 	background-color:#d9e2eb;
 }
 
+li > a {
+	display:inline-block;
+	padding:5px 30px;
+}
+
+header a[href="#work"] {
+	border-color:#000;
+}
+
+a[href="#work"], #hero a {
+	border:thin solid;
+	border-radius:5px;
+}
+
+a {
+	text-transform:uppercase;
+	text-decoration:none;
+	font-weight:300;
+}
+
+a:hover {
+	color:#4717f6;
+	font-weight:400;
+}
+
+li > a[href="#work"]:hover, #hero .row div:first-child a {
+	background:#4717f6;
+	color:#fff !important;
+	border-color:#4717f6;
+}
+
+footer a {
+	color:#fff;
+}
+
+
+footer a[href="#work"] {
+	border-color:#fff;
+}
+
+i {
+	color:#4717f6;
+}
+
+i:hover {
+	color:#a2379a;
+}
+
+#hero a {
+	display:inline-block;
+	padding:5px 0;
+	width:75%;
+	text-align:center;
+}
+
+#hero .row div:first-child, #hero .row div:first-child p {
+	text-align:right;
+}
+
+#hero .row div:last-child, #hero .row div:last-child p {
+	text-align:left;
+}
+
+#hero .row div a:hover {
+	background:#a2379a;
+	border-color:#a2379a;
+	color:#fff;
 	
+}
