--- a/css/main.css
+++ b/css/main.css
@@ -35,10 +35,17 @@ img {
 	display:table;	
 }
 
+/*
 [class*='col-'] {
-	float:left;
 	padding: 0 20px;
 }
+*/
+
+
+[class*='col-'] {
+	float:left;
+}
+
 
 [class*='col-']:first-of-type {
 	padding-left:0;
@@ -207,50 +214,7 @@ img {
 
 
 
-@media (max-width: 480px) {
-	[class*='col-'] {
-		padding: 0 10px;
-		margin-bottom:20px;
-	}
-	
-	.wrapper {
-		width:85%;
-	}
-	
-	
-	.col-1-6, .col-1-9, .col-2-7 {
-		width:33.33%;
-	}
-	
-	.col-1-6:nth-child(3), .col-1-8:nth-child(4), .col-1-9:nth-child(3), .col-1-9:nth-child(6), .col-1-10:nth-child(even), .col-1-12:nth-child(4), .col-1-12:nth-child(8) {
-		padding-right:0;
-	}
-	
-	.col-1-6:nth-child(4), .col-1-8:nth-child(5), .col-1-9:nth-child(4), .col-1-9:nth-child(7), .col-1-10:nth-child(odd), .col-1-12:nth-child(5), .col-1-12:nth-child(9) {
-		padding-left:0;
-	}
-	
-	.col-5-6, .col-5-7 {
-		width:66.66%;
-	}
-	
-	.col-1-7, .col-1-11 {
-		width:100%;
-	}
-	
-	.col-2-7, .col-5-7, .col-1-7, .col-1-11 {
-		padding:0;
-	}
-	
-	.col-1-8, .col-1-12 {
-		width:25%;
-	}
-	
-	.col-1-10 {
-		width:50%;
-	}
 
-}
 
 
 /* Logo Animation */
@@ -277,6 +241,7 @@ img {
 	animation-direction:alternate;
 	animation-iteration-count:infinite;
 	background-size:contain;
+	background-position: center;
 }
 
 #logo-reversed {
@@ -288,6 +253,7 @@ img {
 	animation-direction:alternate;
 	animation-iteration-count:infinite;
 	background-size:contain;
+	background-position: center;
 }
 
 
@@ -306,9 +272,9 @@ li {
 	text-align:center;
 }
 
-nav {
-	float:right !important;
-	padding:15px 0 !important;
+nav.col-1-2 {
+	float:right;
+	padding:15px 0;
 }
 
 header p {
@@ -333,6 +299,13 @@ header p {
 	background-position:center;
 	padding:118px 0 80px;
 	color:#fff;
+	
+}
+
+#hero .col-2-3 {
+	margin:0 auto;
+	text-align: center;
+	float:none;
 }
 
 .bg-lunar-dust {
@@ -405,6 +378,137 @@ i:hover {
 #hero .row div a:hover {
 	background:#a2379a;
 	border-color:#a2379a;
-	color:#fff;
+	color:#fff;	
+}
+
+#hero .row {
+	padding-top:10px;
+}
+
+#about h2 {
+	text-align: center;
+}
+
+#work > div:nth-child(even) .col-1-2:first-child, #work > div:nth-child(odd) .col-1-2:last-child {
+	float:right;
+}
+
+#work > div:nth-child(odd) .col-1-2:first-child {
+	text-align:right;
+}
+
+#work > div .col-1-2:first-child {
+	padding:90px 0;
+}
+
+#about img {
+	border: 3.5px solid #fff;
+	border-radius:100px;
+}
+
+#about .wrapper > .row section:last-child > .col-2-3 {
+	float:right;
+}
+
+#about .wrapper > .row section:first-child > .col-2-3 {
+	text-align:right;
+}
+
+#about .wrapper > .row section, #about .wrapper > .row section > .col-2-3 {
+	padding:0 4.16%;
+}
+
+
+
+
+
+@media (max-width: 480px) {
+	[class*='col-'] {
+		margin-bottom:20px;
+	}
 	
+	.wrapper {
+		width:95%;
+	}
+	
+	#logo, #logo-reversed {
+		width:50%;
+		margin:0 auto;
+		float:none;
+	}
+	
+	nav.col-1-2 {
+		width:100%;
+		float: none;
+	}
+	
+	#hero .col-2-3 {
+		width:83.33%;
+		margin:0 auto;
+	}
+	
+	#home .wrapper.row {
+		text-align: center;
+	}
+	
+	#work .col-1-2 > p, h2 {
+		text-align: center;
+	}
+	
+	#work .col-1-2 {
+		width:100%;
+		float:none;
+	}
+	
+	#work .col-1-2:first-child {
+		width:83.33%;
+		margin:0 auto;
+	}
+	
+	#work > div:nth-child(even) .col-1-2:first-child, #work > div:nth-child(odd) .col-1-2:last-child {
+	float:none;
+	}
+	
+	#about section.col-1-2 {
+		width:100%;
+	}
+	
+	
+	#about .wrapper > .row section {
+		padding:0;
+	}
+	
+	#about .wrapper > .row section:first-child > .col-2-3 {
+		float:right;
+	}
+	
+	#about .wrapper > .row section:last-child > .col-2-3 {
+		float:left;
+		text-align: right;
+	}
+	
+	#about .wrapper > .row section:first-child > .col-2-3 {
+		text-align:left;
+	}
+	
+	#work > div .col-1-2:first-child {
+		padding:0;
+	}
+	
+	#john-d {
+		content:url(../img/team-1.jpg)
+	}
+	
+	#mary-s {
+		content:url(../img/team-3.jpg)
+	}
+	
+	#john-s {
+		content:url(../img/team-4-alt.jpg)
+	}
+	
+	#jane-d {
+		content:url(../img/team-2-alt.jpg)
+	}
+
 }
