--- a/css/main.css
+++ b/css/main.css
@@ -233,7 +233,8 @@ img {
 
 #logo {
 	display:inline-block;
-	height:58px;
+	height:75px;
+	width:186px;
 	background-image:url(../img/logo.png);
 	background-repeat:no-repeat;
 	animation-name: logo;
@@ -245,7 +246,8 @@ img {
 }
 
 #logo-reversed {
-	height:58px;
+	height:75px;
+	width:186px;
 	background-image:url(../img/logo-reversed.png);
 	background-repeat:no-repeat;
 	animation-name: logo-reversed;
@@ -274,9 +276,12 @@ li {
 
 nav.col-1-2 {
 	float:right;
-	padding:15px 0;
+	padding:30px 0;
 }
 
+#logo, #logo-reversed {
+	margin-top:10px;
+}
 header p {
 	margin:0 auto;
 	text-align:center;
@@ -369,10 +374,12 @@ i:hover {
 
 #hero .row div:first-child, #hero .row div:first-child p {
 	text-align:right;
+	padding-right:10px;
 }
 
 #hero .row div:last-child, #hero .row div:last-child p {
 	text-align:left;
+	padding-left:10px;
 }
 
 #hero .row div a:hover {
@@ -419,10 +426,69 @@ i:hover {
 }
 
 
+/*typography*/
 
+h3 {
+	font-weight:100;
+	margin:0 0 2px;
+}
+
+h1 {
+	font-size:40px;
+}
+
+h1, h2 {
+	text-transform: uppercase;
+	margin: 0 0 10px;
+}
+
+h1 span, h2 span {
+	font-weight:100;
+}
+
+header > p, a {
+	font-size:18px;
+}
+p {
+	margin:0;
+	font-size:12px;
+}
+
+.fa {
+	font-size:x-large;
+}
+
+a {
+	color:#fff;
+}
+
+header nav a {
+	color:#000;
+}
+
+#about .wrapper, #work > div {
+	padding:30px 0;
+}
 
 
 @media (max-width: 480px) {
+	
+	#work > div {
+		padding:40px 0 30px;
+	}
+	
+	#about .wrapper {
+		padding:40px 0;
+	}
+	
+	#about .wrapper > header p {
+		width:83.33%;
+	}
+	
+	h1 {
+		font-size:26px;
+	}
+	
 	[class*='col-'] {
 		margin-bottom:20px;
 	}
