--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,169 @@
 @charset "utf-8";
 /* CSS Document */
 
+/*--------------------------------------------------------------
+
+>>> TABLE OF CONTENTS:
+
+----------------------------------------------------------------
+
+1.0 - Typography
+
+	1.1 - Headings
+	1.2 - Body Copy
+	1.3 - Buttons
+	1.4 - Forms
+	1.5 - Lists
+	1.6 - Tables
+2.0 - Navigation Menus
+	2.1 - Main
+	2.2 - Sub
+	2.3 - Footer
+3.0 - Content
+	3.1 - Site Structure
+	3.2	- Site Header
+	3.3	- Site Footer
+4.0 - Media
+5.0 - Utility
+	5.1 - Text Sizes
+	5.2 - Colors
+	5.3 - Alignments
+--------------------------------------------------------------*/
+
+
+
+
+
+
+
+/*--------------------------------------------------------------
+1.0 - Typography
+-------------------------------------------------------------- */
+
+* {
+	font-family: 'Raleway', sans-serif;
+}
+
+* {
+	font-family: 'Raleway', sans-serif;
+}
+
+h3 {
+	font-weight:100;
+	margin:0 0 2px;
+}
+
+h1 {
+	font-size:40px;
+}
+
+h1, h2 {
+	text-transform: uppercase;
+	margin: 0 0 10px;
+}
+
+h1 span, h2 span {
+	font-weight:100;
+}
+
+header > p, a {
+	font-size:18px;
+}
+p {
+	margin:0;
+	font-size:12px;
+}
+
+.fa {
+	font-size:x-large;
+}
+
+a {
+	color:#fff;
+}
+
+header nav a {
+	color:#000;
+}
+/*--------------------------------------------------------------
+2.0 - Navigation Menus
+-------------------------------------------------------------- */
+ul {
+	-webkit-margin-before:0;
+	-webkit-margin-after:0;
+	-webkit-padding-start:0;
+	list-style:none;
+}
+
+li {
+	display:inline-block;
+	width:33.33%;
+	float:left;
+	text-align:center;
+}
+
+nav.col-1-2 {
+	float:right;
+	padding:30px 0;
+}
+
+
+
+/*--------------------------------------------------------------
+3.0 - Content
+-------------------------------------------------------------- */
+
+
+/*--------------------------------------------------------------
+4.0 - Media
+-------------------------------------------------------------- */
+@keyframes logo {
+	0% {background-image: url(../img/logo.png)}
+	100% {background-image: url(../img/logo-12.png)}
+	
+}
+
+@keyframes logo-reversed {
+	0% {background-image: url(../img/logo-reversed.png)}
+	100% {background-image: url(../img/logo-reversed-12.png)}
+	
+}
+
+#logo {
+	display:inline-block;
+	height:75px;
+	width:186px;
+	background-image:url(../img/logo.png);
+	background-repeat:no-repeat;
+	animation-name: logo;
+	animation-duration:2s;
+	animation-direction:alternate;
+	animation-iteration-count:infinite;
+	background-size:contain;
+	background-position: center;
+}
+
+#logo-reversed {
+	height:75px;
+	width:186px;
+	background-image:url(../img/logo-reversed.png);
+	background-repeat:no-repeat;
+	animation-name: logo-reversed;
+	animation-duration:2s;
+	animation-direction:alternate;
+	animation-iteration-count:infinite;
+	background-size:contain;
+	background-position: center;
+}
+
+#logo, #logo-reversed {
+	margin-top:10px;
+}
+
+/*--------------------------------------------------------------
+5.0 - Utility
+-------------------------------------------------------------- */
+
 *, *:after, *:before {
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
@@ -8,10 +171,6 @@
 	-o-box-sizing:border-box;
 	box-sizing:border-box;
 	
-}
-
-* {
-	font-family: 'Raleway', sans-serif;
 }
 
 .wrapper {
@@ -64,26 +223,6 @@ img {
 	width:50%;
 }
 
-/* test items */
-.red {
-	background:red;
-	height:100px;
-}
-
-.white {
-	background:white;
-	height:80px;
-	margin-top:10px;
-	margin-bottom:10px;
-}
-
-.green {
-	background:green;
-	height:60px;
-	margin-top:10px;
-	margin-bottom:10px;
-}
-/* end of test items */
 .col-1-3 {
 	width:33.33%;
 }
@@ -219,69 +358,7 @@ img {
 
 /* Logo Animation */
 
-@keyframes logo {
-	0% {background-image: url(../img/logo.png)}
-	100% {background-image: url(../img/logo-12.png)}
-	
-}
 
-@keyframes logo-reversed {
-	0% {background-image: url(../img/logo-reversed.png)}
-	100% {background-image: url(../img/logo-reversed-12.png)}
-	
-}
-
-#logo {
-	display:inline-block;
-	height:75px;
-	width:186px;
-	background-image:url(../img/logo.png);
-	background-repeat:no-repeat;
-	animation-name: logo;
-	animation-duration:2s;
-	animation-direction:alternate;
-	animation-iteration-count:infinite;
-	background-size:contain;
-	background-position: center;
-}
-
-#logo-reversed {
-	height:75px;
-	width:186px;
-	background-image:url(../img/logo-reversed.png);
-	background-repeat:no-repeat;
-	animation-name: logo-reversed;
-	animation-duration:2s;
-	animation-direction:alternate;
-	animation-iteration-count:infinite;
-	background-size:contain;
-	background-position: center;
-}
-
-
-
-ul {
-	-webkit-margin-before:0;
-	-webkit-margin-after:0;
-	-webkit-padding-start:0;
-	list-style:none;
-}
-
-li {
-	display:inline-block;
-	width:33.33%;
-	float:left;
-	text-align:center;
-}
-
-nav.col-1-2 {
-	float:right;
-	padding:30px 0;
-}
-
-#logo, #logo-reversed {
-	margin-top:10px;
-}
 header p {
 	margin:0 auto;
 	text-align:center;
@@ -428,43 +505,7 @@ i:hover {
 
 /*typography*/
 
-h3 {
-	font-weight:100;
-	margin:0 0 2px;
-}
 
-h1 {
-	font-size:40px;
-}
-
-h1, h2 {
-	text-transform: uppercase;
-	margin: 0 0 10px;
-}
-
-h1 span, h2 span {
-	font-weight:100;
-}
-
-header > p, a {
-	font-size:18px;
-}
-p {
-	margin:0;
-	font-size:12px;
-}
-
-.fa {
-	font-size:x-large;
-}
-
-a {
-	color:#fff;
-}
-
-header nav a {
-	color:#000;
-}
 
 #about .wrapper, #work > div {
 	padding:30px 0;
