--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,6 @@ figure {
 }
 [class*='col-'] {
 	float:left;
-	padding: 0 10px;
 }
 
 /*Cautiously think about the drawbacks of  first-child & last-child. They will not always be a first/last of type fix. Even sided padding and correlating additional wrapper width.*/
@@ -47,13 +46,20 @@ figure {
 	padding-right:0;
 }
 
+ul {
+    display: block;
+    list-style-type: none;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 0px;
+	text-align:center;
+}
+
 /*--------------------------------------------------------------
 1.0 - Typography
 -------------------------------------------------------------- */
-
-* {
-	font-family: 'Raleway', sans-serif;
-}
 
 * {
 	font-family: 'Raleway', sans-serif;
@@ -66,6 +72,10 @@ h3 {
 
 h1 {
 	font-size:40px;
+}
+
+h1, h2 {
+	font-weight:900;
 }
 
 h1, h2 {
@@ -112,12 +122,13 @@ header nav a {
 
 
 li {
-	display:inline-block;
-	width:33.33%;
-	float:left;
+	display:inline;
 	text-align:center;
 }
 
+#hero .align-cntr {
+	text-align:center;
+}
 /*------------------------------------------------------------------------*/
 /*------------------*/
 
@@ -337,11 +348,20 @@ i:hover {
 	color:#a2379a;
 }
 
+#hero ul {
+	margin-top:20px;
+}
 #hero a {
 	display:inline-block;
-	padding:5px 0;
-	width:75%;
 	text-align:center;
+}
+#hero li:first-child a {
+	padding:5px 75.28px;
+	margin-right:20px;
+}
+#hero li:last-child a {
+	padding:5px 57px;
+	margin-left:20px;
 }
 
 #hero .row div:first-child, #hero .row div p {
@@ -370,24 +390,6 @@ nav.col-1-2 {
 .base-r {
 	right:0;
 }
-
-.base--l:before, .base--r:before {
-  border-top: 370px solid transparent;
-  border-bottom: 370px solid transparent;
-  content: "";
-  height: 0;
-  top: 0;
-  position: absolute;
-  width: 0;
-}
-.base--l:before {
-  border-left: 350px solid #000;
-  right: -350px;
-}
-.base--r:before {
-  border-right: 350px solid #000;
-  left: -350px;
-}
 .align-cntr {
 	float:none;
 	margin:0 auto;
@@ -395,31 +397,6 @@ nav.col-1-2 {
 
 #work > div {
 	padding: 200px 0;
-}
-
-.rhombus--l, .rhombus--r {
-	width: 65%;
-	height: 304px;
-	position:absolute;
-	top:80px;
-}
-.rhombus--l {
-	-webkit-transform: skew(-44deg);
-	   -moz-transform: skew(-44deg);
-	     -o-transform: skew(-44deg);
-	transform: skew(-44deg);
-	left:-20%;
-	z-index:-1;
-}
-.rhombus--r {
-	-webkit-transform: skew(44deg);
-	   -moz-transform: skew(44deg);
-	     -o-transform: skew(44deg);
-	transform: skew(44deg);
-	right:-20%;
-	z-index:-1;
-	background-color: #fff;
-	
 }
 
 .relative{
@@ -444,7 +421,7 @@ nav.col-1-2 {
 .base-r:after {
     content: "";
     position: absolute;
-    width: 235%;
+    width: 205%;
     border-width: 80px 0px 0 68px;
     border-style: solid;
     border-color: #000 transparent;
@@ -464,7 +441,7 @@ nav.col-1-2 {
 .base-l:after {
     content: "";
     position: absolute;
-    width: 234.5%;
+    width: 206.5%;
     border-width: 80px 68px 0 0px;
     border-style: solid;
     border-color: #000 transparent;
@@ -485,7 +462,7 @@ nav.col-1-2 {
 .rhombus-r:before {
     content: "";
     position: absolute;
-    width: 112.5%;
+    width: 106.5%;
     border-width: 80px 0 0 68px;
     border-style: solid;
     border-color: #000 transparent;
@@ -505,40 +482,267 @@ nav.col-1-2 {
 .rhombus-l:before {
     content: "";
     position: absolute;
-    width: 157.5%;
+    width: 150.5%;
     border-width: 304px 296px 0px 0px;
     border-style: solid;
     border-color: #d9e2eb transparent;
     bottom: 0px;
     left: 0px;
+	z-index:-1;
 }
 
+#work > div:last-child .base-r:after {
+	display:none;
+}
+
+#about .align-cntr {
+	text-align: center;
+}
+
+#about > div > div:nth-child(2) > .row, #about > div > div:nth-child(4) > .row {
+	background-color:#fff;
+	position:relative;
+	left:-6.9%;
+	top:0;
+	z-index:1;
+	-webkit-transform: skew(-10deg);
+	   -moz-transform: skew(-10deg);
+	     -o-transform: skew(-10deg);
+	transform: skew(-10deg);
+}
+
+#about > div > div:nth-child(2) > .row {
+	padding:20px 0;
+}
+
+#about > div > div:nth-child(2) {
+	background-image:url(../img/team-1.jpg);
+	background-position:right;
+	background-size:contain;
+	background-repeat: no-repeat;
+	background-color:black;
+	position:absolute;
+	width:100%;
+	left:-40%;
+	top:250px;
+}
+
+#about > div > div:nth-child(3) > .row, #about > div > div:nth-child(5) > .row {
+	background-color:#fff;
+	position:relative;
+	left:6.9%;
+	top:0;
+	z-index:1;
+	-webkit-transform: skew(10deg);
+	   -moz-transform: skew(10deg);
+	     -o-transform: skew(10deg);
+	transform: skew(10deg);
+}
+
+#about > div > div:nth-child(3) {
+	background-image:url(../img/team-2-alt.jpg);
+	background-position:left;
+	background-size:contain;
+	background-repeat: no-repeat;
+	background-color:black;
+	position:absolute;
+	width:100%;
+	right:-40%;
+	top: 400px;
+}
+
+
+#about > div > div:nth-child(4) {
+	background-image:url(../img/team-3.jpg);
+	background-position:right;
+	background-size:contain;
+	background-repeat: no-repeat;
+	background-color:black;
+	position:absolute;
+	width:100%;
+	left:-40%;
+	top: 545px;
+}
+
+#about > div > div:nth-child(5) {
+	background-image:url(../img/team-4-alt.jpg);
+	background-position:left;
+	background-size:contain;
+	background-repeat: no-repeat;
+	background-color:black;
+	position:absolute;
+	width:100%;
+	right:-40%;
+	top: 685px;
+}
+
+#about {
+	padding-bottom:625px;
+	padding-top: 100px;
+}
+
+#about div:nth-child(2) > .row .col-2-11, #about div:nth-child(4) > .row .col-2-11 {
+	float:right;
+	padding-right:2%;
+	text-align:right;
+	-webkit-transform: skew(10deg);
+	   -moz-transform: skew(10deg);
+	     -o-transform: skew(10deg);
+	transform: skew(10deg);
+}
+
+#about div:nth-child(3) > .row .col-2-11, #about div:nth-child(5) > .row .col-2-11 {
+	float:left;
+	padding-left:2%;
+	text-align:left;
+	-webkit-transform: skew(-10deg);
+	   -moz-transform: skew(-10deg);
+	     -o-transform: skew(-10deg);
+	transform: skew(-10deg);
+}
 /*--------------- Min Res --------------*/
 
 @media (max-width: 480px) {
 	.blue {
 	background:purple;
 	height:50px;
-	}
-	[class*='col-'] {
+}
+[class*='col-'] {
 		padding: 0 10px;
 		margin-bottom:20px;
-	}	
-	.col-1-6:nth-child(3), .col-1-8:nth-child(4), .col-1-9:nth-child(3), .col-1-9:nth-child(6), .col-1-10:nth-child(even), .col-1-12:nth-child(4), .col-1-12:nth-child(8) {
+}
+.wrapper {
+	width:90%;
+}
+
+.col-1-6:nth-child(3), .col-1-8:nth-child(4), .col-1-9:nth-child(3), .col-1-9:nth-child(6), .col-1-10:nth-child(even), .col-1-12:nth-child(4), .col-1-12:nth-child(8) {
 		padding-right:0;
-	}
-	.col-1-6:nth-child(4), .col-1-8:nth-child(5), .col-1-9:nth-child(4), .col-1-9:nth-child(7), .col-1-10:nth-child(odd), .col-1-12:nth-child(5), .col-1-12:nth-child(9) {
+}
+.col-1-6:nth-child(4), .col-1-8:nth-child(5), .col-1-9:nth-child(4), .col-1-9:nth-child(7), .col-1-10:nth-child(odd), .col-1-12:nth-child(5), .col-1-12:nth-child(9) {
 		padding-left:0;
-	}
-	.col-1-7, .col-1-11 {
+}
+.col-1-7, .col-1-11 {
 		width:100%;
-	}
-	.col-1-7, .col-1-11 {
+}
+.col-1-7, .col-1-11 {
 		padding:0;
-	}
-	.col-1-10 {
+}
+.col-1-10 {
 		width:50%;
+}
+
+#hero .col-2-3 {
+		width:100%;
+}
+
+nav.col-1-2 {
+		width: 100%;
+		float:none;
+		margin-top:30px;
+}
+
+li > a {
+	padding:10px 20px;
+}
+#logo {
+		margin:0 auto;
+		float:none;
+		display:block;
+}
+.base-l {
+    width: 100%;
+    border-width: 0px 0px 200px 0px;
+	top:190px;
+}
+.base-l:after {
+    display:none;
+}
+.base-r {
+    width: 100%;
+    border-width: 0px 0px 200px 0px;
+	top:204px;
+}
+.base-r:after {
+    display:none;
+}
+.rhombus-l {
+    position: absolute;
+    width: 55.6%;
+    border-width: 0px 304px 296px 0px;
+    border-style: solid;
+    border-color: #d9e2eb transparent;
+	bottom: 80px;
+    left: 0px;
+}
+.rhombus-l:before {
+    display: none;
 	}
+#work > div {
+    padding: 50px 0 350px 0;
+}	
+#work .col-1-3 {
+    width:75%;
+}	
+#work .txt-r {
+	text-align: left;
+}
+#work .txt-l {
+	text-align: right;
+}
+.rhombus-r:before {
+	display:none;
+}
+#work .align-cntr.txt-r {
+	float:left;
+}
+#work .align-cntr.txt-l {
+float:right;
+}
+#work .wrapper {
+	overflow:auto;
+}
+#about > div > div:nth-child(2), #about > div > div:nth-child(4) {
+	left:-5%;
+}
+#about > div > div:nth-child(3), #about > div > div:nth-child(5) {
+	right:-5%;
+}
+#about > div > div:nth-child(2) > .row, #about > div > div:nth-child(4) > .row {
+	left:-26.9%;
+}
+#about > div > div:nth-child(3) > .row, #about > div > div:nth-child(5) > .row {
+	left:26.9%;
+}
+#about .col-2-3 {
+	width: 100%;
+}
+#about .col-2-11 {
+	width:60%;
+}
+#about {
+	padding-bottom:725px;
+}
+#about > div > div:nth-child(2) {
+	top:300px;
+}
+#about > div > div:nth-child(3) {
+	top:490px;
+}
+#about > div > div:nth-child(4) {
+	top:635px;
+}
+#about > div > div:nth-child(5) {
+	top:795px;
+}
+#about .col-1-1 {
+	margin-bottom:0;
+}
+#about > div > div > .row {
+	padding:10px 0 0 0;
+}
+#about i {
+	font-size: 45px;
+}
 }
 
 
